@@ -1,3 +1,8 @@
+2010-09-01  Joe English  <jenglish@users.sourceforge.net>
+
+	* library/ttk/entry.tcl: Revert keyboard navigation bindings
+	to use real events instead of virtual events.
+
 2010-09-01  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.9 TAGGED FOR RELEASE ***
